fixed header image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ html body #title_underline{
    transform: translate(-50%, -50%);
 }
 
-@media screen and (max-width: 415px) and (max-height: 823px){
+@media screen and (max-width: 600px) and (max-height: 823px){
    /* #header{
       margin-top: 50%;
    } */
@@ -206,6 +206,9 @@ html body #title_underline{
    }
    #header p{
       font-size: 15px;
+   }
+   #header #header_img img{
+      height: 80vw;
    }
    footer p{
       font-size: 10px;
